first fragment inflates small screen

--- a/PigGame.LittlePig/Resources/layout-large/MainActivity.axml
+++ b/PigGame.LittlePig/Resources/layout-large/MainActivity.axml
@@ -4,11 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <FrameLayout
-        android:id="@+id/MainFragment"
+        android:id="@+id/mainFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 	<FrameLayout
-        android:id="@+id/SecondFragment"
+        android:id="@+id/secondFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
