--- a/PigGame.LittlePig/Resources/layout-small/MainActivity.axml
+++ b/PigGame.LittlePig/Resources/layout-small/MainActivity.axml
@@ -3,8 +3,11 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <FrameLayout
-        android:id="@+id/MainFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</LinearLayout>
+	<fragment
+		android:name="PigGame.LittlePig.MainFragment"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:minWidth="25px"
+		android:minHeight="25px"
+		android:id="@+id/mainFragment" />
+    </LinearLayout>
