--- a/PigGame.LittlePig/Resources/layout-small/SecondActivity.axml
+++ b/PigGame.LittlePig/Resources/layout-small/SecondActivity.axml
@@ -3,8 +3,9 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <FrameLayout
-        android:id="@+id/SecondFragment"
+    <fragment
+		android:name="PigGame.LittlePig.SecondFragment"
+        android:id="@+id/secondFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
