--- a/PigGame.LittlePig/Resources/layout/MainFragment.axml
+++ b/PigGame.LittlePig/Resources/layout/MainFragment.axml
@@ -74,7 +74,7 @@
 		android:text="Start Game"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:id="@+id/startButton"
+		android:id="@+id/start_button"
 		android:layout_marginTop="122.5dp" 
 		android:layout_marginLeft="10dp"
 		android:layout_marginRight="10dp"
