--- a/PigGame.LittlePig/Resources/layout-large/MainActivity.axml
+++ b/PigGame.LittlePig/Resources/layout-large/MainActivity.axml
@@ -2,15 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+	android:weightSum="1">
     <Fragment
 		android:name="PigGame.LittlePig.MainFragment"
         android:id="@+id/mainFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+		android:layout_weight=".5"/>
 	<Fragment
 		android:name="PigGame.LittlePig.SecondFragment"
         android:id="@+id/secondFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="0dp"
+        android:layout_height="match_parent" 
+		android:layout_weight=".5"/>
 </LinearLayout>
