large-land main.axml loads correctly

--- a/PigGame.LittlePig/Resources/layout-large-land/MainActivity.axml
+++ b/PigGame.LittlePig/Resources/layout-large-land/MainActivity.axml
@@ -2,18 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-	android:weightSum="1">
-    <Fragment
+    android:layout_height="match_parent">
+	 <fragment
 		android:name="PigGame.LittlePig.MainFragment"
         android:id="@+id/mainFragment"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-		android:layout_weight=".5"/>
-	<Fragment
+		android:layout_weight="1"/>
+	<fragment
 		android:name="PigGame.LittlePig.SecondFragment"
         android:id="@+id/secondFragment"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent" 
-		android:layout_weight=".5"/>
+		android:layout_weight="1"/>  
 </LinearLayout>
